[gd_scene load_steps=9 format=3 uid="uid://cnkhr7hm063pj"]

[ext_resource type="Script" uid="uid://dwlr1qvwuni6t" path="res://src/scenes/alchemy/ingredient_picking_handler.gd" id="1_7o4g6"]
[ext_resource type="Script" uid="uid://04ix580gocb2" path="res://src/scenes/alchemy/alchemy_engine.gd" id="1_l0m2p"]
[ext_resource type="Script" uid="uid://clco2btno7wgi" path="res://src/scenes/alchemy/inventory_handler.gd" id="2_wruop"]
[ext_resource type="Script" uid="uid://2ln3h4yy10g3" path="res://src/scenes/alchemy/spoon.gd" id="3_tpxyx"]
[ext_resource type="Script" uid="uid://ckkytstvwqc7l" path="res://src/scenes/alchemy/temperature_handler.gd" id="4_kcvvk"]
[ext_resource type="Texture2D" uid="uid://8635eqsig15p" path="res://icon.svg" id="5_8vpwj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l0m2p"]
radius = 128.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tpxyx"]
radius = 16.0

[node name="Alchemy" type="Node2D"]

[node name="AlchemyEngine" type="Node" parent="." node_paths=PackedStringArray("TemperatureHandler") groups=["Engines"]]
script = ExtResource("1_l0m2p")
TemperatureHandler = NodePath("../TemperatureHandler")
spin_slowing_speed = 0.25
spin_accel_speed = 5.0
potion_ending_speed = 100.0

[node name="InventoryHandler" type="Node" parent="." node_paths=PackedStringArray("IngredientItemList", "ExtrasItemList") groups=["Engines"]]
script = ExtResource("2_wruop")
IngredientItemList = NodePath("../IngredientTabs/Ingredientes")
ExtrasItemList = NodePath("../IngredientTabs/Extras")

[node name="IngredientPickingHandler" type="Node" parent="." node_paths=PackedStringArray("IngredientsTab") groups=["Engines"]]
script = ExtResource("1_7o4g6")
IngredientsTab = NodePath("../IngredientTabs")

[node name="TemperatureHandler" type="Node" parent="." node_paths=PackedStringArray("temp_slider", "fire_sprite") groups=["Engines"]]
script = ExtResource("4_kcvvk")
temp_slider = NodePath("../TemperatureSlider")
fire_sprite = NodePath("../TemperatureSprite")

[node name="CauldronArea" type="Area2D" parent="."]
editor_description = "Cauldron to drop ingredients into."
position = Vector2(224, 176)
collision_layer = 2
collision_mask = 0
input_pickable = false

[node name="CauldronColisionShape" type="CollisionShape2D" parent="CauldronArea"]
shape = SubResource("CircleShape2D_l0m2p")

[node name="SpinRaycast" type="Node2D" parent="CauldronArea"]

[node name="SpinCast1" type="RayCast2D" parent="CauldronArea/SpinRaycast"]
position = Vector2(112, 0)
target_position = Vector2(-80, 0)
collision_mask = 4

[node name="Timer" type="Timer" parent="CauldronArea/SpinRaycast/SpinCast1"]
wait_time = 0.33
one_shot = true

[node name="SpinCast2" type="RayCast2D" parent="CauldronArea/SpinRaycast"]
position = Vector2(-112, 0)
target_position = Vector2(80, 0)
collision_mask = 4

[node name="Timer" type="Timer" parent="CauldronArea/SpinRaycast/SpinCast2"]
wait_time = 0.33
one_shot = true

[node name="SpinCast3" type="RayCast2D" parent="CauldronArea/SpinRaycast"]
position = Vector2(0, -112)
target_position = Vector2(0, 80)
collision_mask = 4

[node name="Timer" type="Timer" parent="CauldronArea/SpinRaycast/SpinCast3"]
wait_time = 0.33
one_shot = true

[node name="SpinCast4" type="RayCast2D" parent="CauldronArea/SpinRaycast"]
position = Vector2(0, 112)
target_position = Vector2(0, -80)
collision_mask = 4

[node name="Timer" type="Timer" parent="CauldronArea/SpinRaycast/SpinCast4"]
wait_time = 0.33
one_shot = true

[node name="SpinCast5" type="RayCast2D" parent="CauldronArea/SpinRaycast"]
position = Vector2(80, -80)
target_position = Vector2(-64, 64)
collision_mask = 4

[node name="Timer" type="Timer" parent="CauldronArea/SpinRaycast/SpinCast5"]
wait_time = 0.33
one_shot = true

[node name="SpinCast6" type="RayCast2D" parent="CauldronArea/SpinRaycast"]
position = Vector2(80, 80)
target_position = Vector2(-64, -64)
collision_mask = 4

[node name="Timer" type="Timer" parent="CauldronArea/SpinRaycast/SpinCast6"]
wait_time = 0.33
one_shot = true

[node name="SpinCast7" type="RayCast2D" parent="CauldronArea/SpinRaycast"]
position = Vector2(-80, 80)
target_position = Vector2(64, -64)
collision_mask = 4

[node name="Timer" type="Timer" parent="CauldronArea/SpinRaycast/SpinCast7"]
wait_time = 0.33
one_shot = true

[node name="SpinCast8" type="RayCast2D" parent="CauldronArea/SpinRaycast"]
position = Vector2(-80, -80)
target_position = Vector2(64, 64)
collision_mask = 4

[node name="Timer" type="Timer" parent="CauldronArea/SpinRaycast/SpinCast8"]
wait_time = 0.33
one_shot = true

[node name="Spoon" type="CharacterBody2D" parent="."]
position = Vector2(392, 176)
collision_layer = 4
collision_mask = 0
input_pickable = true
script = ExtResource("3_tpxyx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spoon"]
shape = SubResource("CircleShape2D_tpxyx")

[node name="IngredientTabs" type="TabContainer" parent="."]
offset_left = 456.0
offset_right = 643.0
offset_bottom = 358.0
tab_alignment = 1
current_tab = 0
clip_tabs = false
drag_to_rearrange_enabled = true

[node name="Ingredientes" type="ItemList" parent="IngredientTabs"]
layout_mode = 2
allow_search = false
item_count = 1
same_column_width = true
fixed_icon_size = Vector2i(32, 32)
metadata/_tab_index = 0

[node name="Extras" type="ItemList" parent="IngredientTabs"]
visible = false
layout_mode = 2
item_count = 1
item_0/text = "Az√∫car"
metadata/_tab_index = 1

[node name="TemperatureSlider" type="VSlider" parent="."]
offset_left = 32.0
offset_top = 64.0
offset_right = 48.0
offset_bottom = 288.0
max_value = 4.0
value = 2.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="TemperatureSprite" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(224, 176)
scale = Vector2(1.375, 1.375)
texture = ExtResource("5_8vpwj")

[connection signal="timeout" from="CauldronArea/SpinRaycast/SpinCast1/Timer" to="AlchemyEngine" method="_raycast_timer_finished" binds= [0]]
[connection signal="timeout" from="CauldronArea/SpinRaycast/SpinCast2/Timer" to="AlchemyEngine" method="_raycast_timer_finished" binds= [1]]
[connection signal="timeout" from="CauldronArea/SpinRaycast/SpinCast3/Timer" to="AlchemyEngine" method="_raycast_timer_finished" binds= [2]]
[connection signal="timeout" from="CauldronArea/SpinRaycast/SpinCast4/Timer" to="AlchemyEngine" method="_raycast_timer_finished" binds= [3]]
[connection signal="timeout" from="CauldronArea/SpinRaycast/SpinCast5/Timer" to="AlchemyEngine" method="_raycast_timer_finished" binds= [4]]
[connection signal="timeout" from="CauldronArea/SpinRaycast/SpinCast6/Timer" to="AlchemyEngine" method="_raycast_timer_finished" binds= [5]]
[connection signal="timeout" from="CauldronArea/SpinRaycast/SpinCast7/Timer" to="AlchemyEngine" method="_raycast_timer_finished" binds= [6]]
[connection signal="timeout" from="CauldronArea/SpinRaycast/SpinCast8/Timer" to="AlchemyEngine" method="_raycast_timer_finished" binds= [7]]
[connection signal="input_event" from="Spoon" to="Spoon" method="_on_spoon_click"]
[connection signal="mouse_exited" from="Spoon" to="Spoon" method="_mouse_exited"]
[connection signal="item_clicked" from="IngredientTabs/Ingredientes" to="IngredientPickingHandler" method="_on_ingredient_clicked"]
[connection signal="item_clicked" from="IngredientTabs/Extras" to="IngredientPickingHandler" method="_on_ingredient_clicked"]
[connection signal="value_changed" from="TemperatureSlider" to="TemperatureHandler" method="_temperature_slider_value_changed"]
